cmake_minimum_required(VERSION 3.21)
project(ECE-309-Final-Project)

set(CMAKE_CXX_STANDARD 14)

add_executable(ECE-309-Final-Project
        main.cpp
        Sorry_Deck.cpp
        Sorry_Deck.h
        Sorry_Board.h
        Sorry_Board.cpp
        Computer_Player.cpp
        Computer_Player.h
        Console_Player.cpp
        Console_Player.h
        Sorry_Player.cpp
        Sorry_Player.h
        Sorry_Pawn.cpp
        Sorry_Pawn.h
        Card_Rules.cpp
        Card_Rules.h
        )